@@ -1,4 +1,12 @@
 0.207 2023-09-04
+  [Incompatibe Changes]
+    * The following fields and methods in the IO::Socket class are changed.
+      
+      -  has timeout : protected ro int;
+      +  has Timeout : int;
+      
+      + method timeout : int ();
+      
 0.206 2023-09-04
   [Prerequirement Changes]
     * SPVM::Sys 0.485 is required.
